Switched DB to Postgres on Neon

--- a/nigotis/requirements.txt
+++ b/nigotis/requirements.txt
@@ -1,5 +1,3 @@
-db-sqlite3
-
 django
 drf_spectacular
 django-cors-headers
@@ -8,3 +6,4 @@ djangorestframework
 openai
 llama_index
 python-dotenv
+psycopg2-binary
